[package]
name = "vulkan-tests"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]

[dependencies]
env_logger = "0.5"
failure = "0.1.1"
vulkano = { path = "../vulkano/vulkano" }
vulkano-shader-derive = "0.9"
vulkanoob = { path = "../vulkanoob" }

[dependencies.image]
version = "0.19"
default-features = false
features = ["png_codec"]
